--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
   }
-  
+  .p-5{
+    text-align: center;
+    /* background-color: yellowgreen; */
+    background-image: linear-gradient(140deg, #EADEDB 0%, #BC70A4 50%, #BFD641 75%);
+  }
   textarea {
     background: transparent;
     border: none;
